<resources>
    <string name="app_name">CvBuilder</string>
    <string name="enter_your_email">enter your email</string>
    <string name="enter_your_password">enter your password</string>
    <string name="setup">SetUp</string>
    <string name="if_you_don_t_have_account">if you don\'t have Account</string>
    <string name="click_here">Click Here ?</string>
    <string name="sing_in">Sign In</string>
    <string name="sing_up">Sign Up</string>
    <string name="preview">preview</string>
    <string name="make_cv">make cv</string>
    <string name="MakeCv">Make Cv</string>
    <string name="Cv">CV</string>
    <string name="name">Name</string>
    <string name="fatherName">Father Name</string>
    <string name="EMail_ID">EMail ID</string>
    <string name="mobile">Mobile</string>
    <string name="summary">Summary</string>
    <string name="degreeName">Degree Name</string>
    <string name="institute">Institute</string>
    <string name="startYear">Start Year</string>
    <string name="endYear">End Year</string>
    <string name="companyName">Company Name</string>
    <string name="joiningDateYear">Joining Date Year</string>
    <string name="skillsHobbies"><![CDATA[Skills & Hobbies]]></string>
    <string name="upload_data">Make Cv</string>
    <string name="sign_out">Sign Out</string>
    <string name="curriculum_vitae">Curriculum vitae</string>
    <string name="father_name">Father Name :</string>
    <string name="name_">Name :</string>
    <string name="email_id">EMail ID :</string>
    <string name="mobile_">Mobile :</string>
    <string name="degree_name">Degree Name :</string>
    <string name="summary_">Summary :</string>
    <string name="institute_">Institute :</string>
    <string name="start_year_">Start Year :</string>
    <string name="end_year_">End Year :</string>
    <string name="joining_date_year">Joining Date Year :</string>
    <string name="skills_hobbies_">Skills Hobbies :</string>
    <string name="company_name_">Company Name :</string>
    <string name="email_id_">Email ID :</string>
    <string name="name__">Name :</string>
    <string name="option">Option</string>
</resources>