<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="er"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SetUpActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/setUpTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/setup"
            android:textColor="@color/green"
            android:textSize="70sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolBar" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/setUpLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="100dp"
            android:padding="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/setUpTv">


            <TextView
                android:id="@+id/nameTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_your_email"
                android:textColor="@color/green"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/textEmailEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Please Enter Your Email"
                android:hint="@string/enter_your_email"
                android:inputType="textWebEmailAddress"
                android:singleLine="true"
                android:textColorHint="@color/lightDark"
                app:backgroundTint="@color/green"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nameTv"
                tools:ignore="LabelFor,TextFields" />

            <TextView
                android:id="@+id/emailTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/enter_your_password"
                android:textColor="@color/green"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textEmailEdt" />

            <EditText
                android:id="@+id/textPasswordEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Please Enter Your Password"
                android:hint="@string/enter_your_password"
                android:inputType="text"
                android:textColorHint="@color/lightDark"
                app:backgroundTint="@color/green"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/emailTv"
                tools:ignore="LabelFor,TextFields" />

            <TextView
                android:id="@+id/singUpTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/if_you_don_t_have_account"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textPasswordEdt" />

            <TextView
                android:id="@+id/singUpClick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/click_here"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/singUpTv"
                app:layout_constraintTop_toBottomOf="@id/textPasswordEdt" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/singInBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_shape"
                android:text="@string/sing_in"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/singUpClick" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>